--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="css">
+<link rel="stylesheet" type="text/css" href="main.css">
 <head>
  <title>Greg's List</title>
  <header>
