--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="css">
+<link rel="stylesheet" type="text/css" href="main.css">
 <head>
  <title>Greg's List</title>
  <header>
@@ -21,9 +21,9 @@
   </p>
  <p>
   <div class="pages">
-   <div class="prev">< prev</div>
-   <div class="numbers"> 1 to 100 of 200</div>
-   <div class="next"> next ></div></div></p>
+   <a href="#" class="prev">< prev</a>
+   <a href="#" class="numbers"> 1 to 100 of 200</a>
+   <a href="#" class="next"> next ></a></div></p>
   <main>
   <section>
    <ul>
