some changes from my side

--- a/index.html
+++ b/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="main.css">
-<head>
- <title>Greg's List</title>
- <header>
-  <nav>
-   <ul>
-    <li class="GList"> Greg's List</li>
-    <li> <a href="www.thinkful.com" class="PA"> Post</a> 
-    <li> <a href="wwww.thinkful.com" class="PA"> Account</a></li>
-   </ul>
-  </nav>
- </header>
-</head>
-<body>
- <p>
-  <div class="search">
-   <form><input type="Search Software Jobs" name="Search"></form>
-   <img src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png" class="MGlass">
-  </p>
- <p>
-  <div class="pages">
-   <a href="#" class="prev">< prev</a>
-   <a href="#" class="numbers"> 1 to 100 of 200</a>
-   <a href="#" class="next"> next ></a></div></p>
-  <main>
-  <section>
-   <ul>
-   	<li>November 10th  <a href="www.thinkful.com">Frontend Developer</a>  West Village</li></ul></p>
-   	<p>
-   	 <ul>
-   	<li>November 9th  <a href="wwww.thinkful.com">Graphic Designer</a>  Midtown West</li></ul></p>
-   	<p>
-   	 <ul>
-   	<li>November 8th  <a href="www.thinkful.com">Backend Developer</a> Financial District</li></ul></p>
-   </section>
-  	
-  </main>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Greg's List</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1 class="GList"> Greg's List</h1>
+        <ul>
+          <li> <a href="www.thinkful.com" class="PA"> Post</a> </li>
+          <li> <a href="wwww.thinkful.com" class="PA"> Account</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="search">
+      <form>
+        <input type="Search Software Jobs" name="Search">
+      </form>
+      <img src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png" class="MGlass">
+    </div>
+    <div class="pages">
+      <a href="#" class="prev">< prev</a>
+      <a href="#" class="numbers"> 1 to 100 of 200</a>
+      <a href="#" class="next"> next ></a>
+    </div>
+    <main>
+      <section>
+        <ul>
+          <li>November 10th <a href="www.thinkful.com">Frontend Developer</a>  West Village</li>
+          <li>November 9th  <a href="wwww.thinkful.com">Graphic Designer</a>  Midtown West</li>
+          <li>November 8th  <a href="www.thinkful.com">Backend Developer</a> Financial District</li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
