--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>Greg's List</title>
   </head>
-  <body>
     <header>
       <nav>
         <h1 class="GList"> Greg's List</h1>
@@ -13,22 +12,26 @@
           <li> <a href="wwww.thinkful.com" class="PA"> Account</a></li>
         </ul>
       </nav>
+  <body>
     </header>
     <div class="search">
-      <form>
-        <input type="Search Software Jobs" name="Search">
+      <form action="#">
+        <label for="search"></label>
+        <input type="text" id="Search"/>
+        <img src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png" class="MGlass">  
       </form>
-      <img src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png" class="MGlass">
     </div>
+    <section>
     <div class="pages">
       <a href="#" class="prev">< prev</a>
       <a href="#" class="numbers"> 1 to 100 of 200</a>
       <a href="#" class="next"> next ></a>
     </div>
+    </section>
     <main>
       <section>
         <ul>
-          <li>November 10th <a href="www.thinkful.com">Frontend Developer</a>  West Village</li>
+          <li>November 10th <a href="#">Frontend Developer</a>  West Village</li>
           <li>November 9th  <a href="wwww.thinkful.com">Graphic Designer</a>  Midtown West</li>
           <li>November 8th  <a href="www.thinkful.com">Backend Developer</a> Financial District</li>
         </ul>
